<resources>
    <string name="app_name">Nyndro</string>
    <string name="settings">Ustawienia</string>
    <string name="action_share">Udostępnij</string>
    <string name="information">SANGA BYDGOSZCZ\nZapraszamy na naszą stronę :)</string>


    <!--main text to drawer-->
    <string-array name="drawer_list_option">
        <item>Praktyka</item>
        <item>Statystyka</item>
        <item>Planowanie</item>
    </string-array>
    <string name="open_drawer">Otwórz</string>
    <string name="close_drawer">Zamknij</string>
    <string name="donation">SANGA BYDGOSZCZ</string>

    <!--Practice Adapter -->
    <string name="name_practice">Nazwa praktyki  : </string>
    <string name="progress_name">Powtórzenia     : </string>
    <string name="max_repetition_name">Wymagana ilość  : </string>
    <string name="description_name">Opis            : </string>
    <string name="repetiton_name">Ilość powtórzeń : </string>
    <string name="last_practice_date">Ostatnia        : </string>
    <string name="next_practice_date">Następna        : </string>

    <!--Practice class default values-->
    <string name="chenrizg">Kochające Oczy</string>
    <string name="s_refuge">Krótkie Schronienie</string>
    <string name="refuge">Schronienie - Pokłony</string>
    <string name="vajrasattva">Diamentowy Umysł</string>
    <string name="amitabha">Amitaba</string>
    <string name="mandala">Podarowanie Mandali</string>
    <string name="other_practice">Inna praktyka</string>
    <string name="guru_yoga">Guru Joga</string>
    <string name="chenrizg_desc">OM MANI PEME HUNG</string>
    <string name="s_refuge_desc">LAMA LA CZIAB SUN CZIO\nSANDZIE LA CZIAB SUN CZIO\nCZIE LA CZIAB SUN CZIO\nGENDYN LA CZIAB SUN CZIO</string>
    <string name="refuge_desc">Przyjmujemy schronienie w Lamach\nPrzyjmujemy schronienie w Jidamach i ich polach mocy\nPrzyjmujemy schronienie w Buddach\nPrzyjmujemy schronienie w ich naukach\nPrzyjmujemy schronienie w urzeczywistnionej sandze\nPrzyjmujemy schronienie w tych którzy dają Aktywność i w strażnikach mądrości</string>
    <string name="vajrasattva_desc">Om Benza Sato Samaja\nManu Palaja\nBenza Sato Tenopa\nTi Ta Dri Do Me Be Ła\nSuto Kajo Me Ba Ła\nSupo Kajo Me Ba Ła\nAnu Rakto Me Ba Ła\n Sarła Siddi Memtra Jatsa\nSarła Karma Sutsa Me\nTsitam Szri Ja Kuru Hung\nHaha Haha Ho Baga Łen\nSarła Tata Gata Benza Ma Me\nMyndsa Benzi Ba Ła Maha\nSamaja Sato Ah</string>
    <string name="amitabha_desc">Om Ami Deła Hri</string>
    <string name="mandala_desc">Podarowanie Mandali</string>
    <string name="other_practice_desc">Możesz stworzyć każdą inną praktykę, nadając jaj odpowiednią nazwę i opis.</string>
    <string name="guru_yoga_desc">Guru Joga</string>

    <!--<string name="refuge">Refuge</string>-->
    <!--<string name="vajrasattva">Vajrasattva</string>-->
    <!--<string name="amitabha">Amitabha</string>-->
    <!--<string name="mandala">Mandala</string>-->
    <!--<string name="other_practice">Other practice</string>-->
    <!--<string name="guru_yoga">Guru Yoga</string>-->
    <!--<string name="refuge_desc">Refuge</string>-->
    <!--<string name="vajrasattva_desc">Vajrasattva</string>-->
    <!--<string name="amitabha_desc">Amitabha</string>-->
    <!--<string name="mandala_desc">Mandala</string>-->
    <!--<string name="other_practice_desc">Other practice</string>-->
    <!--<string name="guru_yoga_desc">Guru Yoga</string>-->

    <!--Snackbar action add repetition-->
    <string name="add_fab_snackbar">Jeśli się pomyliłeś to cofnij ostatnią operację! </string>
    <string name="action_snackbar">Cofnij</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_toolbar">Edycja</string>
    <string name="delete_practice">Kasowanie!</string>
    <string name="name_practice_stats">Nazwa: </string>
    <string name="count_practice_stats">Ilość praktykowanych dni:</string>
    <string name="day_of_practice_stats">dni</string>
    <string name="no_state">Brak statystyk</string>
    <string name="number_of_practices_in_months">Ilość praktyk w rozbiciu na miesiące</string>
    <string name="number_of_practices_in_days">Ilość praktyk w rozbiciu na dni tygodnia</string>
    <string name="average_weeks">Średnia tygodniowa:</string>
    <string name="average_months">Średnia miesięczna:</string>
    <string name="average_days">Średnia dzienna:</string>
    <string name="expected_day">Przewidywany koniec:</string>
    <string name="add_remainder_button">DODAJ PRZYPOMNIENIE</string>
    <string name="remaind_text_notificator">"Przypomnienie: "</string>
    <string name="app_label_plans">Plan - przypomnienia</string>
    <string name="app_label_practice">Dodaj praktykę</string>
    <string name="app_label_stats">Statystyki</string>
    <string name="app_label_add_renainder">Nowe przypomnienie</string>
    <string name="cancel_action">ANULUJ</string>
    <string name="deleted_practice_info">"Usunięto "</string>

    //Day of week
    <string-array name="day_of_week">
        <item>Niedziela</item>
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
    </string-array>

    //Months
    <string-array name="months">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>

</resources>
