<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PracticeMain.MainPracticeActivity">

    <item android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@mipmap/ic_settings_applications_white_48dp"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/edit_toolbar"
        android:title="@string/edit_toolbar"
        android:icon="@mipmap/ic_edit_white_48pt"
        android:orderInCategory="2"
        android:visible="true"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:visible="false"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider">
    </item>



</menu>